--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,4 +15,15 @@
         </attr>
     </declare-styleable>
 
+        <declare-styleable name="ToggleView">
+
+            <!-- 当前开关状态的属性, 取值类型为boolean ctrl + shift + c -->
+            <attr name="currentState" format="boolean" />
+
+            <!-- 开关背景图片的属性, 取值类型为: R文件的引用id -->
+            <attr name="switchBackgroundID" format="reference" />
+
+            <!-- 开关滑动块的背景属性, 取值类型为: R文件的引用id -->
+            <attr name="slideButtonBackgroundID" format="reference" />
+        </declare-styleable>
 </resources>
